# daemon

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
agents/: deps-analyzer.js  detector.js  fix-engine.js  lighthouse-scanner.js  perf-analyzer.js  perf-front-analyzer.js  test-generator.js  test-runner.js
crates/daemon-rust/: Cargo.toml  README.md
crates/daemon-rust/examples/: analyze.rs  generate_tests.rs
crates/daemon-rust/src/: analyzers.rs  cli.rs  config.rs  generators.rs  lib.rs  main.rs
crates/daemon-rust/src/templates/: actix_handler_unit.rs  axum_handler_unit.rs  vanilla_unit.rs
docs/: ESLINT_TYPESCRIPT_RUST_FEASIBILITY.md  PLAN-v0.6.0.md  PLAYWRIGHT_RUST_FEASIBILITY.md  nestjs-support.md  review.md  rust-support.md  scoring.md
examples/: README.md
examples/full-review-example/: README.md
examples/nestjs-example/: README.md  package.json
examples/nestjs-example/src/: app.module.ts  main.ts
examples/rust-example/: Cargo.toml  README.md
examples/rust-example/src/: db.rs  main.rs
examples/rust-example/src/handlers/: health.rs  users.rs
examples/rust-example/src/models/: user.rs
examples/scoring-example/: README.md  daemon.config.js
examples/scoring-example/src/components/: Button.tsx  OldComponent.tsx
lib/: config.js  docker.js  reporter.js
prompts/: DEPS_EFFICIENCY.md  E2E.md  EXECUTE.md  INTEGRATION_API.md  INTEGRATION_DB.md  PERF_API.md  PERF_DB.md  PERF_FRONT.md  REMEDIATION.md  UNIT.md
scripts/: dev.js
src/cli/: cli.ts  index.ts
src/cli/commands/: command.types.ts  detect.command.ts  history.command.ts  index.ts  init.command.ts  optimize.command.ts  report.command.ts  review.command.ts  score.command.ts  test.command.ts
src/cli/utils/: index.ts  output.ts  progress.ts
src/core/: constants.ts
src/core/config/: daemon.config.ts  index.ts
src/core/types/: common.types.ts  detection.types.ts  docker.types.ts  index.ts  project.types.ts  scoring.types.ts  shared.types.ts  test.types.ts
src/services/: index.ts
src/services/detection/: framework-detector.ts  index.ts
src/services/detection/__tests__/: framework-detector.test.ts
src/services/docker/: docker-manager.ts  index.ts
src/services/docker/__tests__/: docker-manager.test.ts
src/services/optimization/: index.ts  optimization.service.ts  optimization.types.ts
src/services/optimization/detectors/: bug-detector.ts  code-smell-detector.ts  index.ts  perf-detector.ts
src/services/optimization/optimizers/: code-optimizer.ts  index.ts  perf-optimizer.ts  refact-optimizer.ts
src/services/optimization/patterns/: anti-patterns.ts  index.ts
src/services/reporting/: history.service.ts  index.ts  report.service.ts  reporting.types.ts  trend-analyzer.ts
src/services/reporting/export/: chart.exporter.ts  index.ts  pdf.exporter.ts
src/services/reporting/templates/: html.template.ts  json.template.ts  markdown.template.ts
src/services/review/: index.ts  review.service.ts  review.types.ts
src/services/review/analyzers/: dependency-analyzer.ts  index.ts  nestjs-analyzer.ts  performance-analyzer.ts  security-analyzer.ts  static-analyzer.ts
src/services/review/fixers/: auto-fixer.ts  index.ts  refactor-suggester.ts  test-generator.ts
src/services/review/reporters/: fix-reporter.ts  index.ts  score-reporter.ts
src/services/scoring/: index.ts  scoring-service.ts
src/services/scoring/dimensions/: accessibility.analyzer.ts  backend-logic.analyzer.ts  business-logic.analyzer.ts  code-quality.analyzer.ts  index.ts  performance.analyzer.ts  seo.analyzer.ts  (+3 more)
src/shared/errors/: base.error.ts  command.error.ts  detection.error.ts  docker.error.ts  file.error.ts  index.ts  validation.error.ts
src/shared/utils/: command-executor.ts  file-helper.ts  index.ts  logger.ts
templates/: README.md
templates/k6/: load-test.js
templates/nestjs/: controller.spec.ts  guard.spec.ts  interceptor.spec.ts  module.spec.ts  pipe.spec.ts  service.spec.ts
templates/nestjs/e2e/: api.e2e-spec.ts  auth.e2e-spec.ts
templates/nestjs/fixtures/: test-module.ts
templates/playwright/: e2e.spec.ts
templates/rust/: Cargo.toml  actix-controller.test.rs  axum-handler.test.rs  integration.test.rs  rocket-route.test.rs  unit.test.rs
templates/vitest/: angular-component.test.ts  api.test.ts  component.test.ts  hook.test.ts  solid-component.test.ts  svelte-component.test.ts  vue-component.test.ts
(+8 files in other folders)
