[package]
name = "daemon-rust"
version = "0.1.0"
edition = "2021"
description = "Rust support for Daemon - AI-powered testing and code quality toolkit"
authors = ["Yanis"]
license = "MIT"
repository = "https://github.com/Pamacea/daemon"
keywords = ["testing", "rust", "cargo", "nextest", "code-quality"]
categories = [
    "development-tools::testing",
    "development-tools::cargo-plugins",
]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# File system operations
walkdir = "2.5"
glob = "0.3"
# Regex
regex = "1.11"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Color output
console = "0.15"
# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
# Mocking
mockito = "0.4"

[[bin]]
name = "daemon"
path = "src/main.rs"
