[package]
name = "daemon-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

description = "AI-powered testing and code quality toolkit for Rust projects"
documentation = "https://github.com/Pamacea/daemon/blob/main/crates/daemon-rust/README.md"
repository = "https://github.com/Pamacea/daemon"
readme = "README.md"
license = "MIT"
keywords = ["testing", "quality", "cargo", "axum", "actix"]
categories = [
    "development-tools::testing",
    "development-tools::cargo-plugins",
]
exclude = [".github/", "docs/"]

[metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["tokio", "nextest"]
tokio = ["dep:tokio"]
nextest = []

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"], optional = true }
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# File system operations
walkdir = "2.5"
glob = "0.3"
# Regex
regex = "1.11"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Color output
console = "0.15"
# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
# Mocking
mockito = "0.4"

[[bin]]
name = "daemon-rust"
path = "src/main.rs"

[lib]
name = "daemon_rust"
path = "src/lib.rs"
